force-app/main/default/objects/HubSpotEventLine__c/HubSpotEventLine__c.object-meta.xml
<CustomObject>
    <label>HubSpot Event Line</label>
    <nameField>
        <displayFormat>HEL-{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HubSpot Event Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>