force-app/main/default/objects/HubSpotEventLine__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>