force-app/main/default/objects/HubSpotEventLine__c/fields/Value01__c.field-meta.xml
<CustomField>
    <fullName>Value01__c</fullName>
    <label>Value01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>