force-app/main/default/objects/HubSpotEventLine__c/fields/Value02__c.field-meta.xml
<CustomField>
    <fullName>Value02__c</fullName>
    <label>Value02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>