force-app/main/default/objects/HubSpotEventLine__c/fields/Value05__c.field-meta.xml
<CustomField>
    <fullName>Value05__c</fullName>
    <label>Value05</label>
    <length>255</length>
    <type>Text</type>
</CustomField>